# k2app

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .mcp.json  AGENT.md  CLAUDE.md  Makefile  center  k2-test-proxy-config.yml  osv-scanner.toml  package.json
.agents/: product-marketing-context.md
.claude/: settings.json
api/: .api-index.yaml  CLAUDE.md  api_admin_announcements.go  api_admin_approval.go  api_admin_batch_script.go  api_admin_batch_task.go  api_admin_batch_unit_test.go  api_admin_campaigns.go  api_admin_cloud.go  api_admin_cloud_install.go  api_admin_connection_rating.go  api_admin_device.go  api_admin_device_log.go  api_admin_device_stats.go  api_admin_edm.go  api_admin_enterprise.go  api_admin_enterprise_test.go  api_admin_license_key.go  api_admin_license_key_batch.go  api_admin_node.go  api_admin_node_iptype_test.go  api_admin_node_operation.go  api_admin_node_operation_test.go  api_admin_order.go  api_admin_order_refund.go  api_admin_order_refund_test.go  api_admin_permissions.go  api_admin_plan.go  api_admin_plan_integration_test.go  api_admin_provision_job.go  api_admin_provision_job_test.go  api_admin_retailer.go  api_admin_stats.go  api_admin_strategy.go  api_admin_ticket_reply.go  api_admin_traffic.go  api_admin_traffic_test.go  api_admin_tunnel.go  api_admin_tunnel_integration_test.go  api_admin_tunnel_iptype_test.go  (+282 more)
contracts/: api-contract.json
desktop/: CLAUDE.md  package.json
desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  entitlements.overleap.plist  entitlements.plist  installer-hooks.nsh  installer.nsi  tauri.bundle.conf.json  tauri.conf.json  tauri.conf.overleap.json  windows-sign.sh
desktop/src-tauri/KaituTunnel/: Info.plist  KaituTunnel.entitlements  PacketTunnelProvider.swift
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/icons-overleap/: icon.icns
desktop/src-tauri/keys/: apple_certificate_base64.txt  private.key  private.key.pub
desktop/src-tauri/ne_helper/: K2NEHelper.swift  build.sh  k2_ne_helper.h
desktop/src-tauri/nsis-languages/: English.nsh  SimpChinese.nsh
desktop/src-tauri/profiles/: Kaitu_Desktop_Developer_ID.provisionprofile  Kaitu_Tunnel_Developer_ID.provisionprofile
desktop/src-tauri/src/: app_list.rs  channel.rs  icon_protocol.rs  installed_apps.rs  linux_updater.rs  log_upload.rs  main.rs  ne.rs  router_bridge.rs  service.rs  status_stream.rs  storage.rs  storage_crypto.rs  tray.rs  updater.rs  window.rs
docker/: Dockerfile.linux-build  demo.env  docker-compose.private.yml  docker-compose.yml  linux-build-inner.sh
docs/: debug-sysext-steps.md  private-node-V1-prod-deploy.md  seo-impromvement.md  test-matrix-v0.4.6.md  test-matrix.md  test-tauri-daemon-mode.md  test-windows-service.md  uat-2026-03-24.md
mcp/: .gitignore  CLAUDE.md  center_client.go  center_client_test.go  daemon_client.go  daemon_client_test.go  go.mod  go.sum  hwid_darwin.go  hwid_linux.go  hwid_windows.go  main.go  session.go  session_test.go  storage_crypto.go  storage_crypto_test.go  tauri_storage.go  tauri_storage_test.go  tool_account.go  tool_account_test.go  tool_connect.go  tool_connect_test.go  tool_disconnect.go  tool_disconnect_test.go  tool_login.go  tool_login_test.go  tool_plans.go  tool_plans_test.go  tool_servers.go  tool_servers_test.go  tool_status.go  tool_status_test.go  tool_subscribe.go  tool_subscribe_test.go
mobile/: CLAUDE.md  capacitor.config.ts  package.json
releases/: README.md  v0.3.19.md  v0.3.20.md  (+5 more)
(+1854 files in other folders)
