[package]
name = "k2app"
version = "0.4.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-localhost = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-mcp-bridge = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["time", "macros", "rt"] }
log = "0.4"
flate2 = "1"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
dirs = "5"

[features]
mcp-bridge = ["dep:tauri-plugin-mcp-bridge"]
ne-mode = []

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"

[build-dependencies]
tauri-build = { version = "2", features = [] }
