[package]
name = "k2app"
version = "0.4.0-beta.6"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-localhost = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
tauri-plugin-process = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-mcp-bridge = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "stream"] }
tokio = { version = "1", features = ["time", "macros", "rt"] }
log = "0.4"
flate2 = "1"
tar = "0.4"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
glob = "0.3"
dirs = "5"
url = "2"
futures-util = "0.3"
sha2 = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
wmi = "0.14"

[features]
mcp-bridge = ["dep:tauri-plugin-mcp-bridge"]
ne-mode = []

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "s"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
